--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -13,7 +13,7 @@
 
 <div class="container-fluid mt-3">
     <div class="row">
-        <h4>Account Info</h4>
+        <h4>Account Statistics</h4>
     </div>
 </div>
 
@@ -24,7 +24,7 @@
                 <div class="card-header">
                     Folders</div>
                 <div class="card-body text-right" style="font-size: 60px">
-                    9 <i class="fas fa-folder"></i>
+                    {{ folder_count }} <i class="fas fa-folder"></i>
                 </div>
                 <div class="card-footer">
                     The number of user owned folders.</div>
@@ -36,7 +36,7 @@
                 <div class="card-header">
                     Files</div>
                 <div class="card-body text-right" style="font-size: 60px">
-                    20 <i class="fas fa-file"></i>
+                    {{ file_count }} <i class="fas fa-file"></i>
                 </div>
                 <div class="card-footer">
                     The number of user owned files.</div>
@@ -47,10 +47,10 @@
                 <div class="card-header">
                     Storage Used</div>
                 <div class="card-body text-right" style="font-size: 60px">
-                    53% <i class="fas fa-database"></i>
+                    {{percentage_used}}% <i class="fas fa-database"></i>
                 </div>
                 <div class="card-footer">
-                    500mb out of 1000mb used</div>
+                    {{user_preferences.current_usage_mb }}mb out of {{user_preferences.max_usage_mb }}mb used</div>
             </div>
         </div>
     </div>
@@ -63,11 +63,21 @@
 </div>
 
 <div class="container-fluid">
-    <div class="col-md-3">
-        <form>
+    <div class="col-md-4">
+        <form action="{% url 'save_preferences' %}" method="POST">
+            {% csrf_token %}
+            <label>Name & Surname</label>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="first_name" value="{{user.first_name}}">
+                <input type="text" class="form-control" name="last_name" value="{{user.last_name}}">
+                <div class="input-group-append">
+                    <input class="btn btn-outline-secondary" type="submit" value="Save">
+                </div>
+            </div>
             <label>Recycle Bin Lifetime (Days)</label>
             <div class="input-group mb-3">
-                <input type="number" class="form-control" name="setting-value">
+                <input type="number" class="form-control" name="recycle_lifetime" max="90" min="0"
+                    value="{{user_preferences.recyclebin_lifetime}}">
                 <div class="input-group-append">
                     <input class="btn btn-outline-secondary" type="submit" value="Save">
                 </div>
