--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -193,7 +193,6 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" onclick="sharePopup('{{ folder.id }}',true)">Share Folder</a>
                         <a class="dropdown-item" onclick="publish('{{ folder.id }}', true)">Create Public Link</a>
-                        <a class="dropdown-item" href="#">Something</a>
                     </div>
                 </div>
             </td>
@@ -223,9 +222,8 @@
                         <a class="dropdown-item" onclick="renamePopup('{{ file.id }}',false)">Rename File</a>
                         <a class="dropdown-item" onclick="remove('{{ file.id }}', false)">Remove File</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" onclick="sharePopup('{{ folder.id }}',false)">Share File</a>
+                        <a class="dropdown-item" onclick="sharePopup('{{ file.id }}',false)">Share File</a>
                         <a class="dropdown-item" onclick="publish('{{ file.id }}', false)">Create Public Link</a>
-                        <a class="dropdown-item">Something</a>
                     </div>
                 </div>
             </td>
