--- a/templates/shared/content.html
+++ b/templates/shared/content.html
@@ -50,16 +50,12 @@
 <!-- File/Folder Controls-Buttonbar -->
 <div class="file-controls mb-3">
     <div class="btn-group" role="group" aria-label="Basic example">
-        <form action="{% url 'search' %}" id="search-form">
-            <input class="form-control ml-2" type="search" placeholder="Search" aria-label="Search" name="query">
-        </form>
-        <button type="button" class="btn mr-2" id="search-submit">Search</button>
         <button type="button" class="btn" data-toggle="modal" data-target="#createFolderModel">+ Create Folder</button>
         <!-- <button type="button" class="btn">Download File</button> -->
         {% if current.parent_folder %}
         <a type="button" class="btn" {% if current.parent_folder.parent_folder %}
-            href="{% url 'shared_content' current.parent_folder.id %}" {% else %} href="{% url 'shared'%}" {% endif %}><i
-                class=" fas fa-level-up-alt"></i>
+            href="{% url 'shared_content' current.parent_folder.id %}" {% else %} href="{% url 'shared'%}"
+            {% endif %}><i class=" fas fa-level-up-alt"></i>
         </a>
         {% endif %}
     </div>
@@ -125,59 +121,11 @@
     </thead>
     <tbody id="file-view-body">
 
-        {% for folder in folders %}
-        <tr id="folder-{{ folder.id }}-row">
-            <td>
-                <a href="{% url 'shared_content' folder.id %}" class="droppable draggable" id="folder-{{ folder.id }}">
-                    <i class="fas fa-folder"></i>
-                    <span id="folder-{{ folder.id }}-name">{{ folder.name }}</span>
-                </a>
-            </td>
-            <td>folder {% if folder.is_public %}| <i class="fas fa-globe" title="Public Folder"></i>{% endif %}</td>
-            <td>{{ folder.owner.first_name }}</td>
-            <td>{{ folder.date_created |timesince }} ago</td>
-            <td>-</td>
-            <td>
-                <div class="dropleft">
-                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" onclick="renamePopup('{{ folder.id }}',true)">Rename
-                            Folder</a>
-                        <a class="dropdown-item" onclick="remove('{{ folder.id }}', true)">Remove Folder</a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
+        <!-- Folders -->
+        {% include 'partials/_folder-row.html' %}
+        <!-- Files -->
+        {% include 'partials/_file-row.html' %}
 
-        <!-- FILES -->
-        {% for file in files %}
-        <tr id="file-{{ file.id }}-row">
-            <td>
-                <a href="{% url 'download' file.id %}" class="draggable" id="file-{{ file.id }}">
-                    <i class="fas fa-file"></i>
-                    <span id="file-{{ file.id }}-name">{{ file.name }}</span></a>
-            </td>
-            <td>{{ file.file_type }} {% if file.is_public %} | <i class="fas fa-globe"
-                    title="Public File"></i>{% endif %}</td>
-            <td>{{ file.owner.first_name }}</td>
-            <td>{{ file.date_created |timesince }} ago</td>
-            <td>{{ file.file_source.size }}</td>
-            <td>
-                <div class="dropleft">
-                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a href="{% url 'download' file.id %}" class="dropdown-item">Download File</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" onclick="renamePopup('{{ file.id }}',false)">Rename File</a>
-                        <a class="dropdown-item" onclick="remove('{{ file.id }}', false)">Remove File</a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
 
     </tbody>
 </table>
