--- a/templates/recyclebin/bin.html
+++ b/templates/recyclebin/bin.html
@@ -12,74 +12,39 @@
 </div>
 
 <div class="container-fluid mt-2">
-    <p>Files in the recycle bin still accounts for storage used.</p>
-    <p>All files will be removed from the recycle bin after 60 days from deletion.</p>
+    <p>Files in your recycle bin still account for storage used. Files will automatically be deleted after a set period
+        of time</p>
 </div>
 
 <!-- File/Folder Controls-Buttonbar -->
 <div class="file-controls mb-3">
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn">Restore All</button>
-        <button type="button" class="btn">Delete All</button>
+        <form action="{% url 'restore' 'all' %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" name="restore_all" class="btn" value="Restore All">
+        </form>
     </div>
 </div>
+
 
 <table class="table table-hover file-view">
     <thead>
         <tr>
             <th scope="col">Name</th>
             <th scope="col">Type</th>
+            <th scope="col">Owner</th>
             <th scope="col">Date Deleted</th>
+            <th scope="col">Size</th>
             <th scope="col"></th>
         </tr>
     </thead>
     <tbody id="file-view-body">
 
-        {% for folder in folders %}
-        <tr id="folder-{{ folder.id }}-row">
-            <td><a href="">
-                    <i class="fas fa-folder"></i>
-                    {{ folder.name }}
-                </a>
-            </td>
-            <td>folder</td>
-            <td>{{ folder.date_recycled}}</td>
-            <td>
-                <div class="dropleft">
-                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" onclick="restore('{{ folder.id }}', true)">Restore Folder</a>
-                        <a class="dropdown-item" onclick="perm_delete('{{ folder.id }}', true)">Permanently Remove</a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
+        <!-- Folders -->
+        {% include 'partials/_folder-row.html' %}
+        <!-- Files -->
+        {% include 'partials/_file-row.html' %}
 
-        {% for file in files %}
-        <tr id="file-{{ file.id }}-row">
-            <td><a href="">
-                    <i class="fas fa-file"></i>
-                    {{ file.name }}
-                </a>
-            </td>
-            <td>{{ file.file_type }}</td>
-            <td>{{ file.date_recycled}}</td>
-            <td>
-                <div class="dropleft">
-                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" onclick="restore('{{ file.id }}', false)">Restore File</a>
-                        <a class="dropdown-item" onclick="perm_delete('{{ file.id }}', false)">Permanently Remove</a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
-
-        <!-- Do Files Here -->
     </tbody>
 </table>
 
