Admin site models hidden & Navigation bug fixed

--- a/templates/shared/shared.html
+++ b/templates/shared/shared.html
@@ -24,7 +24,7 @@
 </section>
 
 <div class="container-fluid mt-2">
-    <p>Files you shared with other people will still be part of your<a href="{% url 'myfiles' %}"> personal file
+    <p>Files you shared with other users/groups will still be part of your<a href="{% url 'myfiles' %}"> personal file
             directory</a>
     </p>
 </div>
