--- a/templates/shared/content.html
+++ b/templates/shared/content.html
@@ -67,7 +67,7 @@
 <div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="folder-create-form" method="POST" action="{% url 'create_folder' %}">
+        <form class="modal-content" id="folder-create-form" method="POST">
             {% csrf_token %}
             <div class="modal-header">
                 <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
@@ -76,6 +76,7 @@
                 </button>
             </div>
             <div class="modal-body text-center">
+                <input type="hidden" name="shared" value="True">
                 <input type="hidden" name="current_folder_id" value="{{ current.id }}">
                 <input type="text" placeholder="Folder Name" name="folder_name">
                 <input type="submit" class="btn btn-primary" value="Create Folder">
