Groups and Group Sharing Implemented

--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -63,97 +63,9 @@
     </div>
 </div>
 
-<!-- Folder Creation Modal -->
-<!-- Form : folder-create-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="folder-create-form" method="POST" action="{% url 'create_folder' %}">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-                <input type="hidden" name="current_folder_id" value="{{ current.id }}">
-                <input type="text" placeholder="Folder Name" name="folder_name">
-                <input type="submit" class="btn btn-primary" value="Create Folder">
-            </div>
-        </form>
-    </div>
-</div>
-
-
-<!-- Folder Rename Modal -->
-<!-- Form : folder-rename-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="renameModal" tabindex="-1" role="dialog" aria-labelledby="renameModalTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="rename-form" method="POST">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="renameModalLongTitle">Rename Item</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-                <input type="hidden" name="id" id="rename-cur-id">
-                <input type="hidden" name="type" id="rename-type">
-                <input type="text" placeholder="New Name" name="name" id="rename-name">
-                <input type="submit" class="btn btn-primary" value="Rename">
-            </div>
-        </form>
-    </div>
-</div>
-
-
-<!-- Folder Share Modal -->
-<!-- Form : share-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="shareModalTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="share-form" method="POST">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="shareModalLongTitle">Share Folder</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-left">
-                <input type="hidden" name="id" id="share-cur-id">
-                <input type="hidden" name="type" id="share-type">
-
-                <p><b>Users</b></p>
-                <div id="share-user-list">
-                    <!-- User Checkbox Example -->
-                    <!-- 
-                        <div class="checkbox">
-                            <label><input type="checkbox" name="users[]" value="id">Name Surname (Email)</label>
-                        </div>
-                     -->
-                </div>
-
-                <p><b>Groups</b></p>
-                <div id="share-group-list">
-                    <div class="checkbox">
-                        <label><input type="checkbox" value="">COS216</label>
-                    </div>
-                </div>
-
-
-                <input type="submit" class="btn btn-primary" value="Share">
-            </div>
-        </form>
-    </div>
-</div>
-
+{% include 'partials/forms/_create.html' %}
+{% include 'partials/forms/_rename.html' %}
+{% include 'partials/forms/_share.html' %}
 
 <table class="table table-hover file-view">
     <thead>
