--- a/templates/shared/content.html
+++ b/templates/shared/content.html
@@ -61,53 +61,8 @@
     </div>
 </div>
 
-<!-- Folder Creation Modal -->
-<!-- Form : folder-create-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="folder-create-form" method="POST">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-                <input type="hidden" name="shared" value="True">
-                <input type="hidden" name="current_folder_id" value="{{ current.id }}">
-                <input type="text" placeholder="Folder Name" name="folder_name">
-                <input type="submit" class="btn btn-primary" value="Create Folder">
-            </div>
-        </form>
-    </div>
-</div>
-
-<!-- Folder Rename Modal -->
-<!-- Form : folder-rename-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="renameModal" tabindex="-1" role="dialog" aria-labelledby="renameModalTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="rename-form" method="POST">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="renameModalLongTitle">Rename Item</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-                <input type="hidden" name="id" id="rename-cur-id">
-                <input type="hidden" name="type" id="rename-type">
-                <input type="text" placeholder="New Name" name="name" id="rename-name">
-                <input type="submit" class="btn btn-primary" value="Rename">
-            </div>
-        </form>
-    </div>
-</div>
+{% include 'partials/forms/_create.html' %}
+{% include 'partials/forms/_rename.html' %}
 
 <table class="table table-hover file-view">
     <thead>
